# hackathon-2

./: .gitignore  render.yaml
phase-1/: .gitignore  README.md  pyproject.toml
phase-1/.specify/memory/: constitution.md
phase-1/history/prompts/constitution/: 001-initialize-constitution-v1-0-0.constitution.prompt.md
phase-1/history/prompts/todo-console-app/: 002-create-spec-todo-console-app.spec.prompt.md  003-plan-todo-console-app.plan.prompt.md  004-tasks-todo-console-app.tasks.prompt.md  005-analyze-consistency-todo-console-app.tasks.prompt.md  006-implement-todo-console-app.implement.prompt.md
phase-1/specs/01-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-1/specs/01-todo-console-app/checklists/: requirements.md
phase-1/specs/01-todo-console-app/contracts/: service_contract.md
phase-1/src/: main.py
phase-1/src/models/: task.py
phase-1/src/services/: interfaces.py  task_service.py
phase-1/src/ui/: console.py
phase-1/tests/: conftest.py
phase-1/tests/integration/: test_console_flow.py
phase-1/tests/unit/: test_task_service.py
phase-2/backend/: pyproject.toml  requirements.txt  vercel.json
phase-2/backend/src/: main.py
phase-2/backend/src/api/: deps.py  main.py
phase-2/backend/src/core/: config.py
phase-2/backend/src/models/: task.py
phase-2/backend/src/schemas/: task.py
phase-2/backend/src/services/: task_service.py
phase-4/backend/: .env.example  pyproject.toml
phase-4/backend/src/: main.py
phase-4/backend/src/api/: main.py
phase-4/backend/src/core/: config.py  security.py
phase-4/backend/src/models/: chat.py
phase-4/backend/src/schemas/: task.py
phase-4/backend/tests/: manual_isolation_check.py
(+169 files in other folders)
